grails-app/assets/stylesheets/sass/pages/task/promis/promisPrint.scss
@import '../taskResultPrint';

@page {
    margin: 0cm;
}

html,body {
    margin-bottom: 0;
    overflow: hidden;
}

#main {
    padding: 0 40px;
}

.question-list {
    margin: 0 0 10px 12px;
}

.question {
    font-size: 13px;
    font-weight: 700;
    color: $result-main-color;
    margin-left: -18px;
}

.answer {
    position: relative;
    margin-top: 2px;

    .text {
        font-size: 8pt;
    }
}

.result-circle-radio {
    position: absolute;
    top: 3px;
    left: -20px;
    display: inline-block;
    box-sizing: content-box;
    width: 12px;
    height: 12px;
    border: 1px solid gray;
    border-radius: 50%;
}

.result-circle-radio-checked {
    position: absolute;
    top: 2px;
    left: 2px;
    display: block;
    width: 0;
    height: 0;
    border-radius: 50%;
    border: 4px solid $result-main-color;
    background-color: $result-main-color;
}

.result-circle-radio-nrs {
    position: relative;
    top: 3px;
    display: inline-block;
    box-sizing: content-box;
    width: 18px;
    height: 18px;
    border: 1px solid gray;
    border-radius: 50%;
    margin-right: 4px;

    .content-number, .content-number-10 {
        position: absolute;
        left: 3px;
        top: 0;
        color: #000;
        font-size: 10px;
        padding: 3px;
    }

    .content-number-checked, .content-number-checked-10 {
        position: absolute;
        left: -4px;
        top: -7px;
        color: #f5f5f5;
        font-size: 10px;
    }

    .content-number-10 {
        left: 0;
    }

    .content-number-checked-10 {
        left: -6px;
    }
}

.result-circle-radio-checked-nrs {
    position: absolute;
    display: block;
    width: 0;
    height: 0;
    border-radius: 50%;
    border: 9px solid #AED2E2;
}



.task-list-wrapper:after {
    content: '';
    display: table;
    clear: both;
}

.task-list-part {
    float: left;
    width: 50%;
    box-sizing: border-box;

    &.part-0 {
        padding-right: 15px;
        border-right: 1px solid #8e8e8e;
    }

    &.part-1 {
        padding-left: 20px;
    }
}

.answer-nrs {
    display: inline-block;
}

.list-nrs {
    margin: 40px 0 0 -15px;
    position: relative;
}

//special
.no-pain,.severe-pain {
    position: absolute;
    font-size: 12px;
    font-weight: 500;
    top: -25px;
}

.no-pain {
    left: 0;
}

.severe-pain {
    right: 38px;
}

.score-wrap {
    display: inline-block;
    padding: 0 6px;
}

